--- a/.env-example
+++ b/.env-example
@@ -1,19 +1,19 @@
-APP_NAME=Reimbursement
+APP_NAME=Admin
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost.test
+APP_URL=http://admin-panel.test
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
+DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
 DB_PORT=5432
-DB_DATABASE=
-DB_USERNAME=
-DB_PASSWORD=
+DB_DATABASE=admindb
+DB_USERNAME=postgres
+DB_PASSWORD=admin123
 
 BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
