--- a/.env-example
+++ b/.env-example
@@ -8,12 +8,12 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=pgsql
+DB_CONNECTION=pgsql # pgsql / mysql
 DB_HOST=127.0.0.1
 DB_PORT=5432
 DB_DATABASE=admindb
-DB_USERNAME=postgres
-DB_PASSWORD=admin123
+DB_USERNAME=
+DB_PASSWORD=
 
 BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
